User Exp, and components added

--- a/src/components/Carousel/carousel.scss
+++ b/src/components/Carousel/carousel.scss
@@ -1,7 +1,7 @@
 .carousel{
     position: relative;
     .caro-img{
-        width: 100vw;
+        width: 100%;
         height: 60vh;
         object-fit: cover;
     }
