--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -19,9 +19,15 @@
                 display: flex;
                 flex-direction: column;
                 gap: 2vh;
-                .postmenu{
-                    display: flex;
-                    gap: 7vw;
+                position: relative;
+                .menu{
+                    border: none;
+                    width: 2.5vw;
+                    height: 2.5vw;
+                    background-color: white;
+                    position: absolute;
+                    right: 0;
+                    top: 6vh;              
                 }
                 .medtext{
                     font-size: 18px;
@@ -30,12 +36,59 @@
                 .boldtext{
                     font-weight: bold;
                     font-size: 22px;
+                    width: 40vw;
                 }
                 .smtext{
                     font-size: 18px;
                     color: #5C5C5C;
                 }
             }
+            .details{
+                display: flex;
+                align-items: center;
+                gap: 5vw;
+                .date{
+                    display: flex;
+                    gap: 0.4vw;
+                    img{
+                        object-fit: cover;
+                    }
+                }
+                .location{
+                    display: flex;
+                    gap: 0.4vw;
+                    img{
+                        object-fit: cover;
+                    }
+                }
+            }
+            .website{
+                .websitebtn{
+                    width: 100%;
+                    height: 6vh;
+                    background-color: white;
+                    color: #E56135;
+                    font-family: poppins;
+                    font-weight: bold;
+                    font-size: 14px;
+                    border: 1px solid #A9AEB8;
+                    border-radius: 10px;
+                }
+            }
+            .Apply{
+                .applybtn{
+                    width: 100%;
+                    height: 6vh;
+                    background-color: white;
+                    color: #02B875;
+                    font-family: poppins;
+                    font-weight: bold;
+                    font-size: 14px;
+                    border: 1px solid #A9AEB8;
+                    border-radius: 10px;
+                }
+            }
+
             .userEx{
                 margin: 1.5vw;
                 display: flex;
@@ -59,5 +112,36 @@
     }
     .right{
         flex: 1;
+        .locedit{
+            border-bottom: 1px solid #B8B8B8;
+            margin-right: 7vw;
+            display: flex;
+            align-items: center;
+            padding-bottom: 1vw;
+            .input{
+                border: none;
+                font-size: 14px;
+                width: 13vw;
+                outline: none;
+                &::placeholder{
+                    color: black;
+                }
+            }
+            
+        }
+        .loctext{
+            margin-top: 5vh;
+            margin-right: 5vw;
+            display: flex;
+            img{
+                object-fit: cover;
+                width: 1vw;
+                height: 1vh;
+            }
+            .locspan{
+                color: #a3a3a3;
+                font-size: 13px;
+            }
+        }
     }
 }
