--- a/src/components/Carousel/carousel.scss
+++ b/src/components/Carousel/carousel.scss
@@ -5,6 +5,9 @@
         height: 60vh;
         object-fit: cover;
     }
+    .caro-img-sm{
+        display: none;
+    }
     .span-div{
         position: absolute;
         left: 10vw;
@@ -16,6 +19,48 @@
         }
         .caro-spansm{
             font-size: 18px;            
+        }
+    }
+    .joinbtn{
+        display: none;
+    }
+}
+@media screen and (max-width: 1080px){
+    .carousel{
+        width: 100%;
+        height: 38vh;
+        .caro-img{
+            display: none;
+        }
+        .caro-img-sm{
+            display: flex;
+            width: 100%;
+            height: 38vh;
+            object-fit: cover;
+        }
+        .span-div{
+            position: absolute;
+            left: 5vw;
+            top: 27vh;
+            color: white;
+            .caro-span{
+                font-weight: bold;
+                font-size: 17px;
+            }
+            .caro-spansm{
+                font-size: 12px;            
+            }
+        }
+        .joinbtn{
+            display: flex;
+            position: absolute;
+            top: 3.75vh;
+            right: 4vw;
+            background-color: transparent;
+            color: white;
+            font-family: poppins;
+            border: 1px solid white;
+            border-radius: 0.5vh;
         }
     }
 }
