--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,43 +1,75 @@
 .header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1vw 4vw;
-    .main-logo{
-        width: 9vw;
-        height: 100%;
-    }
-    .search{
+    .large-header{
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
-        gap: 0.7vw;
-        background-color: #F2F2F2;
-        padding: 0.5vw 0.5vw 0.5vw 0.8vw;
-        border-radius: 5vw;
-        .sealogo{
-            width: 1.2vw;
+        padding: 1vw 4vw;
+        .main-logo{
+            width: 9vw;
             height: 100%;
         }
-        .search-text{
-            font-family: poppins;
-            border: none;
+        .search{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 0.7vw;
             background-color: #F2F2F2;
-            outline: none;
-            width: 20vw;
+            padding: 0.5vw 0.5vw 0.5vw 0.8vw;
+            border-radius: 5vw;
+            .sealogo{
+                width: 1.2vw;
+                height: 100%;
+            }
+            .search-text{
+                font-family: poppins;
+                border: none;
+                background-color: #F2F2F2;
+                outline: none;
+                width: 20vw;
+            }
+        }
+        .right{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            .spandiv{
+                gap: 0.3vw;
+                display: flex;
+            }
+            .boldspan{
+                font-weight: bold;
+                color: #2F6CE5;
+                cursor: pointer;
+            }
         }
     }
-    .right{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        .spandiv{
-            gap: 0.3vw;
-            display: flex;
+    .closebutn{
+        position: fixed;
+        right: 19vw;
+        z-index: 50;
+        top: 9.5vh;
+    }
+    .small-header{
+        display: none;
+    }
+}
+
+@media screen and (max-width: 1080px){
+    .header{
+        .large-header{
+            display: none;
         }
-        .boldspan{
-            font-weight: bold;
-            color: #2F6CE5;
+        
+        .small-header{
+            display: block;
+            position: absolute;
+            z-index: 1;
+            top: 3vh;
+            left: 5vw;
+            img{
+                width: 100%;
+                height: 4vh;
+            }
         }
     }
 }
