--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -25,6 +25,7 @@
                     border: none;
                     width: 2.5vw;
                     height: 2.5vw;
+                    cursor: pointer;
                     background-color: white;
                     position: absolute;
                     right: 0;
@@ -37,7 +38,6 @@
                 .boldtext{
                     font-weight: bold;
                     font-size: 22px;
-                    width: 40vw;
                 }
                 .smtext{
                     font-size: 18px;
@@ -51,15 +51,21 @@
                 .date{
                     display: flex;
                     gap: 0.4vw;
+                    font-size: 12px;
+                    align-items: center;
                     img{
                         object-fit: cover;
+                        height: 3vh;
                     }
                 }
                 .location{
                     display: flex;
                     gap: 0.4vw;
+                    align-items: center;
+                    font-size: 12px;
                     img{
                         object-fit: cover;
+                        height: 3vh;
                     }
                 }
             }
@@ -89,7 +95,6 @@
                     border-radius: 10px;
                 }
             }
-
             .userEx{
                 margin: 1.5vw;
                 display: flex;
@@ -98,7 +103,7 @@
                     display: flex;
                     align-items: center;
                     font-weight: bold;
-                    gap: 1vw;
+                    gap: 2vw;
                     .userImg{
                         border-radius: 50%;
                     }
@@ -107,6 +112,16 @@
                     display: flex;
                     align-items: center;
                     gap: 2vw;
+                    button{
+                        border: none;
+                        display: flex;
+                        align-items: center;
+                        font-family: poppins;
+                        border-radius: 0.4vw;
+                        .span{
+                            display: none;
+                        }
+                    }
                 }
             }
         }
@@ -177,6 +192,7 @@
                         padding: 2px 10px;
                         font-size: 13px;
                         border-radius: 12px;
+
                     }
                     .grpbtnbl{
                         font-family: poppins;
@@ -199,4 +215,108 @@
             color: #2F6CE5;
         }
     }
+    .pen{
+        display: none;
+    }
+}
+
+@media screen and (max-width: 1080px){
+    .home{
+        display: flex;
+        flex-direction: column;
+        margin: 3vh 0vw 3vh 0vw;
+        gap: 5vw;
+        .left{
+            flex:1;
+            .post-ared{
+                margin-bottom: 2vh;
+                .postimg{
+                    height: 23vh;
+                }
+                .text{
+                    margin: 3vw;
+                    .menu{
+                        top: 5vh;
+                        right: 10vw;         
+                    }
+                    .medtext{
+                        font-size: 14px;
+                    }
+                    .boldtext{
+                        font-size: 16px;
+                        width: 80vw;
+                    }
+                    .smtext{
+                        font-size: 14px;
+                    }
+                }
+            }
+            .details{
+                .date{
+                    gap: 0.4vw;
+                    img{
+                        object-fit: cover;
+                    }
+                }
+                .location{
+                    display: flex;
+                    gap: 0.4vw;
+                    img{
+                        object-fit: cover;
+                    }
+                }
+            }
+            .website{
+                .websitebtn{
+                    font-size:13px;
+                }
+            }
+            .Apply{
+                .applybtn{
+                    font-size:13px;
+                }
+            }
+
+            .userEx{
+                .userleft{
+                    font-size: 14px;
+                    gap: 1vw;
+                }
+                .userright{
+                    button{
+                        display: flex;
+                        align-items: center;
+                        font-family: poppins;
+                        border-radius: 0.4vw;
+                        border: none;
+                        .span{
+                            display: flex;
+                        }
+                    }
+                }
+            }
+        }
+        .right{
+            display: none;
+        }
+        .pen{
+            display: block;
+            width: 9vh;
+            height: 9vh;
+            right: 4vw;
+            bottom: 4vw;
+            position: fixed;
+            object-fit: cover;
+        }
+    }
+    .opendiv{
+        display: block;
+        .closebutn{
+            position: fixed;
+            right: 2vw;
+            top: 22vh;
+            z-index: 999999;
+        }
+    }
+    
 }
